fix : optimised and fixed some noob mistakes in adding dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.light {
+    background-color: white;
+    color: black;
+}
+
+.dark {
+    background-color: #282C34;
+    color: white;
+}
+
